@@ -1,38 +1,32 @@
 #!/bin/bash
-APP_NAME=alien4cloud
-PIDFILE=/var/run/${APP_NAME}.pid
-ALIEN_PATH="/opt/alien4cloud/alien.war"
-ALIEN_CONF="/etc/alien4cloud/"
 
-JAVA_OPTIONS="-server -showversion -XX:+AggressiveOpts -Xmx1400m -Xms1400m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -Xloggc:/var/log/alien4cloud/gc.log ${JVM_ARGS}"
+APP_NAME=alien4cloud
+#PIDFILE=/var/run/${APP_NAME}.pid
+PROC=`ps -ef | grep -e alien4cloud* | grep -v grep | awk -F " " '{ print $2 }'`
+
+JAVA_OPTIONS="-server -showversion -XX:+AggressiveOpts -Xmx1400m -Xms1400m -XX:MaxPermSize=512m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -Xloggc:/var/log/alien4cloud/gc.log"
 
 case "$1" in
 start)
-  printf "%-50s" "Starting $APP_NAME ..."
-  sudo bash -c "java $JAVA_OPTIONS -cp $ALIEN_CONF:$ALIEN_PATH org.springframework.boot.loader.WarLauncher ${APP_ARGS} > /var/log/alien4cloud/alien4cloud.out 2>&1 & echo \$! > ${PIDFILE}"
+  printf "%-50s\n" "Starting $APP_NAME ..."
+  cd /opt/alien4cloud/alien4cloud/
+  sudo bash -c "/opt/alien4cloud/alien4cloud/alien4cloud.sh ${APP_ARGS} >> /opt/alien4cloud/alien4cloud/logs/vm.out 2>&1 & echo \$!"
 ;;
 status)
-  printf "%-50s" "Checking $NAME..."
-  if [ -f $PIDFILE ]; then
-    PID=`cat $PIDFILE`
-    if [ -z "`ps axf | grep ${PID} | grep -v grep`" ]; then
-      printf "%s\n" "Process dead but pidfile exists"
-    else
-      echo "Running"
-    fi
+  if [[ $PROC ]]; then
+    echo "$APP_NAME is running!"
   else
-    printf "%s\n" "Service not running"
+    echo "$APP_NAME is not Running"
   fi
 ;;
 stop)
-  printf "%-50s" "Stopping $NAME"
-  PID=`cat $PIDFILE`
-  if [ -f $PIDFILE ]; then
-    kill -HUP $PID
+  printf "%-50s" "Stopping $APP_NAME"
+  if [[ $PROC ]]; then
+    sudo kill $PROC
     printf "%s\n" "Ok"
-    rm -f $PIDFILE
+    #rm -f $PIDFILE
   else
-    printf "%s\n" "pidfile not found"
+   printf "Process is not running"
   fi
 ;;
 restart)
